--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+#Story 1#
 Case 1:
 Given: a parking lot, and a car
 When: park the car
@@ -27,3 +28,19 @@ Case 6:
 Given: a parking lot with maxed out capacity, and a car
 When: park the car
 Then: return no parking ticket
+
+# Story2
+Case 1:
+Given: a parking lot, and an unrecognized ticket
+When: fetch the car
+Then: return nothing with error message "Unrecognized parking ticket.”
+
+Case 2:
+Given: a parking lot, and a used ticket
+When: fetch the car
+Then: return nothing with error message "Unrecognized parking ticket."
+
+Case 3:
+Given: a parking lot without any position, and a car
+When: park the car
+Then: return nothing with error message "No available position."
